# FFmpegLearn

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AndroidLog.h  AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  JNICallback.cpp  JNICallback.h  RubyPlayer.cpp  RubyPlayer.h  VideoChannel.cpp  VideoChannel.h  macro.h  native-lib.cpp  safe_queue.h
app/src/main/cpp/ffmpeg/libs/include/libavcodec/: avcodec.h
app/src/main/cpp/ffmpeg/libs/include/libavutil/: avutil.h  file.h  frame.h
app/src/main/java/com/example/ffmpegdemo/: Flags.java  MainActivity.java  PlayRtmpDataActivity.java  PlayVideoActivity.java  RubyPlayer.java
app/src/main/res/layout/: activity_main.xml  activity_play_rtmp.xml  activity_play_vido.xml  item_recyclerview.xml
gradle/wrapper/: gradle-wrapper.properties
opensles_learn/: build.gradle
opensles_learn/src/main/: AndroidManifest.xml
opensles_learn/src/main/cpp/: AndroidLog.h  Audio.cpp  Audio.h  CMakeLists.txt  CallJava.cpp  CallJava.h  FFmpeg.cpp  FFmpeg.h  Playstatus.cpp  Playstatus.h  Queue.cpp  Queue.h  native-lib.cpp
opensles_learn/src/main/java/com/opensles/ffmpegmusicplayer/: MainActivity.java
opensles_learn/src/main/java/com/opensles/ffmpegmusicplayer/listener/: WlOnParparedListener.java
opensles_learn/src/main/java/com/opensles/ffmpegmusicplayer/log/: MyLog.java
opensles_learn/src/main/java/com/opensles/ffmpegmusicplayer/player/: Player.java
opensles_learn/src/main/res/layout/: activity_main.xml
opensles_learn/src/main/res/values/: strings.xml  themes.xml
opensles_learn/src/main/res/values-night/: themes.xml
